# serializer version: 1
# name: test_switch_entities_snapshot[switch.xenia_espresso_machine_eco_mode-registry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.xenia_espresso_machine_eco_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'ECO mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:sprout',
    'original_name': 'ECO mode',
    'platform': 'xenia_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'eco_mode',
    'unique_id': 'xenia_home_eco_mode_xenia.local',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities_snapshot[switch.xenia_espresso_machine_eco_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Xenia Espresso Machine ECO mode',
      'icon': 'mdi:sprout',
    }),
    'context': <ANY>,
    'entity_id': 'switch.xenia_espresso_machine_eco_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_switch_entities_snapshot[switch.xenia_espresso_machine_power-registry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.xenia_espresso_machine_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Power',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:coffee-maker',
    'original_name': 'Power',
    'platform': 'xenia_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'power',
    'unique_id': 'xenia_home_power_xenia.local',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities_snapshot[switch.xenia_espresso_machine_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Xenia Espresso Machine Power',
      'icon': 'mdi:coffee-maker',
    }),
    'context': <ANY>,
    'entity_id': 'switch.xenia_espresso_machine_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_switch_entities_snapshot[switch.xenia_espresso_machine_steam_boiler_power-registry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'switch',
    'entity_category': None,
    'entity_id': 'switch.xenia_espresso_machine_steam_boiler_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Steam boiler power',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:kettle-steam',
    'original_name': 'Steam boiler power',
    'platform': 'xenia_home',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'steam_boiler_power',
    'unique_id': 'xenia_home_steam_boiler_power_xenia.local',
    'unit_of_measurement': None,
  })
# ---
# name: test_switch_entities_snapshot[switch.xenia_espresso_machine_steam_boiler_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Xenia Espresso Machine Steam boiler power',
      'icon': 'mdi:kettle-steam',
    }),
    'context': <ANY>,
    'entity_id': 'switch.xenia_espresso_machine_steam_boiler_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
